feat: implement lead journey workflow and replace legacy dashboard
- Remove legacy energy monitoring components and views
- Add new Lead Journey modules: Awareness, Capture, Nurturing, Qualification, Closing, Retention
- Update navigation structure in Sidebar and MainLayout
- Add mock data for new lead management features
- Clean up unused UI components and hooks
- Include Playwright screenshots and project documentation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enbw-dashboard-react",
+  "name": "swk-admin-dashboard",
   "private": true,
   "version": "1.0.0",
   "type": "module",
