--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.294.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.10.3",
-    "lucide-react": "^0.294.0"
+    "reactflow": "^11.11.4",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
